--- a/index3.html
+++ b/index3.html
@@ -102,14 +102,24 @@
                 <img src="https://image.freepik.com/fotos-gratis/papel-de-caderno-em-branco-lapis-e-oculos-no-local-de-trabalho_151013-11254.jpg"
                  alt="..."></div>
             <p class="fontcod">Olá Caro(a) colega! </p>
+
+
+
+
             <p class="fontnormal">
             Meu Nome é Rosemeire de Fátima Ferraz, sou docente do Centro Paula Souza,  lotada na Etec de Poá, atualmente desenvolvendo a função de coordenadora de Projetos na Cetec Capacitações. </br>
             Iniciei meus estudos de mestrado profissional em janeiro/2019 com o título de pesquisa <b>ENVELHECIMENTO E TRABALHO DOCENTE: Motivos para permanecer no trabalho mesmo após a aposentadoria</b>,  entretanto, em 13/11/2019 foi publicado uma emenda constitucional 103, em que o servidor que requerer a aposentadoria junto ao INSS, a partir desta data e quando a aposentadoria for concedida terá que romper o vínculo empregatício. Mesmo assim, sendo de grande importância os estudos em desenvolvimento, preciso do apoio dos colegas para concluir minha pesquisa e finalizar meus estudos. 
             Portanto, estou lhe convidando a acessar o link abaixo, se desejar, para que possa ler o Termo de Consentimento Livre e Esclarecido e 2 questionários:  Sociodemográfico e a Escala de Motivação Docente. 
-            Conto com sua participação!
+            Conto com sua participação!</br>
+            Esta pesquisa ficará disponível até 23/10/2020</br></br>
+            NOTA: Caso já tenha respondido esta pesquisa, por favor desconsidere este email.</br></br>
             Desde já agradeço sua atenção e contribuição!
-            <div class="button"><a href='https://forms.gle/cg5hkuFYFFibMz6y5'>Acessar link</a></div>
+            <div class="button"><a href='https://forms.gle/YohoBT55phVXPDZm8'>Acessar link</a></div>
             </p>
+
+
+
+
         </div>
 </body>
 
